--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
   "crates/owp-protocol",
   "crates/owp-server",
+  "crates/owp-client-cli",
 ]
 resolver = "2"
 
@@ -19,9 +20,11 @@ rand = "0.8.5"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
 time = { version = "0.3.37", features = ["formatting", "macros", "parsing", "serde"] }
-tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
+tokio = { version = "1.43.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["cors", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+thiserror = "2.0.11"
+url = "2.5.4"
 uuid = { version = "1.11.0", features = ["serde", "v4"] }
