--- a/crates/owp-client-cli/Cargo.toml
+++ b/crates/owp-client-cli/Cargo.toml
@@ -1,22 +1,16 @@
 [package]
-name = "owp-server"
+name = "owp-client-cli"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 
 [dependencies]
 anyhow.workspace = true
-axum.workspace = true
 clap.workspace = true
-directories.workspace = true
 owp-protocol = { path = "../owp-protocol" }
-rand.workspace = true
-serde.workspace = true
 serde_json.workspace = true
-time.workspace = true
 tokio.workspace = true
-tower.workspace = true
-tower-http.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+url.workspace = true
 uuid.workspace = true
