--- a/crates/owp-protocol/Cargo.toml
+++ b/crates/owp-protocol/Cargo.toml
@@ -6,6 +6,8 @@ license.workspace = true
 
 [dependencies]
 serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
 time.workspace = true
+tokio.workspace = true
 uuid.workspace = true
-
