--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,9 @@ directories = "5.0.1"
 rand = "0.8.5"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
+tempfile = "3.10.1"
 time = { version = "0.3.37", features = ["formatting", "macros", "parsing", "serde"] }
-tokio = { version = "1.43.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal"] }
+tokio = { version = "1.43.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["cors", "trace"] }
 tracing = "0.1.41"
