--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ members = [
   "crates/owp-protocol",
   "crates/owp-server",
   "crates/owp-client-cli",
+  "crates/owp-discovery",
+  "programs/owp-registry",
 ]
 resolver = "2"
 
@@ -14,11 +16,17 @@ license = "MIT"
 [workspace.dependencies]
 anyhow = "1.0.95"
 axum = "0.7.9"
+base64 = "0.22.1"
+borsh = "0.10.4"
+borsh-derive = "0.10.4"
+bs58 = "0.5.1"
 clap = { version = "4.5.27", features = ["derive"] }
 directories = "5.0.1"
 rand = "0.8.5"
+reqwest = { version = "0.12.12", default-features = false }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
+solana-program = "2.0.0"
 tempfile = "3.10.1"
 time = { version = "0.3.37", features = ["formatting", "macros", "parsing", "serde"] }
 tokio = { version = "1.43.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal"] }
@@ -29,3 +37,4 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 thiserror = "2.0.11"
 url = "2.5.4"
 uuid = { version = "1.11.0", features = ["serde", "v4"] }
+zeroize = "1.3.0"
