--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
   "crates/owp-server",
   "crates/owp-client-cli",
   "crates/owp-discovery",
-  "programs/owp-registry",
+  "crates/owp-registry-types",
 ]
 resolver = "2"
 
@@ -26,7 +26,6 @@ rand = "0.8.5"
 reqwest = { version = "0.12.12", default-features = false }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
-solana-program = "2.0.0"
 tempfile = "3.10.1"
 time = { version = "0.3.37", features = ["formatting", "macros", "parsing", "serde"] }
 tokio = { version = "1.43.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal"] }
@@ -37,4 +36,3 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 thiserror = "2.0.11"
 url = "2.5.4"
 uuid = { version = "1.11.0", features = ["serde", "v4"] }
-zeroize = "1.3.0"
