--- a/crates/owp-server/Cargo.toml
+++ b/crates/owp-server/Cargo.toml
@@ -10,6 +10,7 @@ axum.workspace = true
 clap.workspace = true
 directories.workspace = true
 owp-protocol = { path = "../owp-protocol" }
+owp-discovery = { path = "../owp-discovery" }
 rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
