--- a/apps/owp-unity/Packages/manifest.json
+++ b/apps/owp-unity/Packages/manifest.json
@@ -1,9 +1,8 @@
 {
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.6",
-    "com.unity.test-framework": "1.1.33"
+    "com.unity.test-framework": "1.1.33",
+    "com.unity.textmeshpro": "3.0.7",
+    "com.unity.timeline": "1.7.7"
   }
 }
-
