--- a/crates/owp-server/Cargo.toml
+++ b/crates/owp-server/Cargo.toml
@@ -14,6 +14,8 @@ owp-discovery = { path = "../owp-discovery" }
 rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+sha2.workspace = true
+hex.workspace = true
 tempfile.workspace = true
 time.workspace = true
 tokio.workspace = true
