--- a/apps/owp-unity/Packages/manifest.json
+++ b/apps/owp-unity/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.atteneder.gltfast": "https://github.com/atteneder/glTFast.git#v5.0.4",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.7",
